change version for creating release

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.engow.projects</groupId>
     <artifactId>webserver</artifactId>
-    <version>1.0-</version>
+    <version>0.1</version>
 
 <build>
     <plugins>
